<?xml version="1.0"?>
<package format="2">
  <name>ceres_mono_orb_slam2</name>
  <version>0.0.0</version>
  <description>The ceres_mono_orb_slam2 package</description>

  <maintainer email="b51live@gmail.com">
    b51
  </maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>git</build_depend>
  <build_depend>google-mock</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>python-sphinx</build_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
</package>
